--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,13 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
+
 }
 apply plugin: "androidx.navigation.safeargs"
+apply plugin: 'dagger.hilt.android.plugin'
+
 
 android {
     namespace 'com.rimapps.shoppingapp'
@@ -25,15 +30,17 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     android {
         viewBinding.enabled = true
     }
+
+
 }
 
 dependencies {
@@ -60,5 +67,10 @@ dependencies {
     //lifecycle
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
 
-
+    //hilt
+    implementation "com.google.dagger:hilt-android:2.44.2"
+    kapt "com.google.dagger:hilt-compiler:2.44"
+}
+kapt {
+    correctErrorTypes true
 }
